--- a/pentaho-xul-swt/build.properties
+++ b/pentaho-xul-swt/build.properties
@@ -1,6 +1,7 @@
-project.revision=7.1.0.0-12
+project.revision=7.1.0.0-12-9
 ivy.artifact.id=pentaho-xul-swt
 ivy.artifact.group=pentaho
 impl.title=Pentaho SWT XUL
 dependency.libcss.revision=7.1.0.0-12
+dependency.pentaho-xul.revision=7.1.0.0-12
 javadoc.packagenames=org.pentaho.*
