--- a/pentaho-xul-swt/build.properties
+++ b/pentaho-xul-swt/build.properties
@@ -1,6 +1,7 @@
-project.revision=7.0.0.0-25
+project.revision=7.0.0.0-25-9
 ivy.artifact.id=pentaho-xul-swt
 ivy.artifact.group=pentaho
 impl.title=Pentaho SWT XUL
 dependency.libcss.revision=7.0.0.0-25
+dependency.pentaho-xul.revision=7.0.0.0-25
 javadoc.packagenames=org.pentaho.*
