--- a/pentaho-xul-swt/build.properties
+++ b/pentaho-xul-swt/build.properties
@@ -1,6 +1,7 @@
-project.revision=8.0.0.0-28
+project.revision=8.0.0.0-28-13
 ivy.artifact.id=pentaho-xul-swt
 ivy.artifact.group=pentaho
 impl.title=Pentaho SWT XUL
 dependency.libcss.revision=8.0.0.0-28
+dependency.pentaho-xul.revision=8.0.0.0-28
 javadoc.packagenames=org.pentaho.*
