--- a/swt/pom.xml
+++ b/swt/pom.xml
@@ -5,7 +5,7 @@
 
   <artifactId>commons-xul-swt</artifactId>
   <packaging>jar</packaging>
-  <version>8.3.0.0-371</version>
+  <version>8.3.0.0-371-19</version>
 
   <name>Commons XUL SWT</name>
 
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>org.pentaho</groupId>
       <artifactId>commons-xul-core</artifactId>
-      <version>${project.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>org.dom4j</groupId>
